# LegacyCoinTrader1.0

./: .coveragerc  .env.backup.before_fix  .env.env.backup.before_fix  .env.example  .eslintignore  .gitignore  .pre-commit-config.yaml  AGENTS.md  AGGRESSIVE_CONFIG_CHANGES.md  ALLOCATION_FIX_SUMMARY.md  API.md  AUTOSTART_README.md  BALANCE_FIX_INSTRUCTIONS.md  BERA_POSITION_ISSUE_SUMMARY.md  BOLLINGER_BANDS_FIX_README.md  BOT_LOG_FIXES_README.md  CHART_LOADING_OPTIMIZATION.md  CHART_UPDATE_OPTIMIZATION_SUMMARY.md  CLEAR_CACHE_README.md  COINBASE_TO_KRAKEN_SUCCESS.md  CRITICAL_FIXES_IMPLEMENTATION_PLAN.md  CRITICAL_FIXES_IMPLEMENTATION_SUMMARY.md  DASHBOARD_PNL_FIX_REPORT.md  DOCKER_STARTUP_GUIDE.md  DUPLICATE_FIX_FINAL.md  DUPLICATE_POSITIONS_FIX.md  DUPLICATE_POSITIONS_FIX_SUMMARY.md  ERROR_HANDLING_ENHANCEMENT_SUMMARY.md  EVALUATION_PIPELINE_FINAL_STATUS.md  EVALUATION_PIPELINE_FIX_REPORT.md  EVALUATION_PIPELINE_README.md  FRONTEND_AUTO_LAUNCH_FIX.md  FRONTEND_CONFIG_PAGES_README.md  FRONTEND_INTEGRATION_STATUS.md  FRONTEND_LIVE_DASHBOARD_README.md  INTEGRATED_SYSTEM_README.md  INTERACTIVE_SHUTDOWN.md  KRAKEN_NONCE_CCXTPRO_FIXES.md  KRAKEN_NONCE_FIX_README.md  LAUNCHER_README.md  (+400 more)
.github/: CI_CD_SETUP.md
.github/workflows/: ci-cd.yml  ci.yml  kubernetes-deploy.yml
backtest/: __init__.py  bulk_loader.py  solana_sniper_sim.py
backup_wallet_fix_20250902_191537/: paper_wallet_state.yaml  user_config.yaml
backup_wallet_fix_robust_20250902_202129/: paper_wallet_config.yaml  paper_wallet_state.yaml  user_config.yaml
certs/: ca.crt  docker-compose-tls.yml  server.crt  server.key
config/: api_error_handling.yaml  backtest_config.yaml  enhanced_scanning.yaml  managed_secrets.yaml  pump_sniper_config.yaml  tenants.yaml  trading_config.yaml
crypto_bot/: .env  __init__.py  auto_optimizer.py  balance_management.py  bot_controller.py  capital_tracker.py  config.yaml  config.yaml.backup  console_control.py  console_monitor.py  enhanced_scan_integration.py  evaluation_pipeline_integration.py  evaluation_pipeline_monitor.py  fund_manager.py  grid_state.py  interactive_shutdown.py  log_reader.py  main.py  meta_selector.py  metrics.py  ml_signal_model.py  open_position_guard.py  orchestration.py  paper_wallet.py  paper_wallet_config.yaml  phase_runner.py  pipeline_monitor.py  portfolio_rotator.py  position_monitor.py  risk.py  runtime_signals.py  sentiment_filter.py  solana_trading.py  startup_utils.py  strategy_router.py  sync_service.py  tax_logger.py  telegram_bot_ui.py  telegram_ctl.py  test_api_credentials.py  (+8 more)
crypto_bot/backtest/: backtest_runner.py  enhanced_backtester.py  gpu_accelerator.py
crypto_bot/cache/: __init__.py  liquid_pairs.py
crypto_bot/config/: REFERENCE.md  __init__.py  lunarcrush_config.yaml  reference.py  settings.py
crypto_bot/docs/: MOMENTUM_EXIT_GUIDE.md
crypto_bot/examples/: momentum_exit_example.py
crypto_bot/execution/: __init__.py  advanced_orders.py  cex_executor.py  cex_listing_scanner.py  executor.py  kraken_ws.py  solana_executor.py  solana_mempool.py
crypto_bot/indicators/: __init__.py  cycle_bias.py
crypto_bot/logs/: metrics.csv  pattern_frequency.csv  trades.csv
crypto_bot/regime/: __init__.py  ml_fallback.py  pattern_detector.py  regime_classifier.py  regime_config.yaml
crypto_bot/risk/: __init__.py  exit_manager.py  momentum_position_manager.py  risk_manager.py
crypto_bot/rl/: __init__.py  strategy_selector.py
crypto_bot/services/: interfaces.py  strategy_evaluator.py
crypto_bot/signals/: __init__.py  signal_fusion.py  weight_optimizer.py
docs/: hybrid_migration_playbook.md
frontend/: Dockerfile  README.md  SECURITY_OPERATIONS.md  __init__.py  api.py  app.py  auth.py  chart_scaling.py  config.py  gateway.py  requirements.txt  test-design.html  utils.py
libs/: circuit_breaker.py  dual_write_manager.py  pyproject.toml  resilience.py  retry_policy.py
libs/bootstrap/: __init__.py  startup.py
libs/execution/: __init__.py  cex_executor.py
libs/market_data/: __init__.py  loader.py
libs/models/: __init__.py  paper_wallet.py
libs/notifications/: __init__.py
libs/risk/: __init__.py  risk_manager.py
libs/services/: __init__.py  interfaces.py
libs/strategy/: __init__.py  evaluator.py
logs_backup_20250902_203656/: paper_wallet_state.yaml
psycopg2/: __init__.py  extensions.py
schema/: scanner.py
services/: __init__.py
ta/: __init__.py  momentum.py  trend.py  volatility.py  volume.py
tasks/: refresh_pairs.py
tests/: conftest.py  test_advanced_orders.py  test_api_endpoints.py  test_auto_optimizer.py  test_backtest_integration.py  test_backtesting_integration.py  test_bandit.py  test_bollinger_bands.py  test_bounce_scalper.py  test_breakout_bot.py  test_cache_interface_fix.py  test_cex_executor.py  test_chart_scaling.py  test_circuit_breaker.py  test_circuit_breaker_integration.py  test_clear_cache.py  test_cli_gateway.py  test_complete_solution.py  test_config.py  test_config_management_integration.py  test_critical_fixes_integration.py  test_current_price_fix.js  test_cycle_timing.py  test_duplicate_fix.sh  test_end_to_end_integration.py  test_enhanced_circuit_breaker.py  test_enhanced_error_handler.py  test_enhanced_fetcher_regression.py  test_enhanced_ohlcv_fetcher.py  test_enhanced_scan_integration.py  test_error_handler.py  test_evaluation_pipeline_e2e.py  test_evaluation_pipeline_integration.py  test_evaluation_pipeline_integration_flow.py  test_execute_signals.py  test_frontend_api_integration.py  test_frontend_auth.py  test_frontend_cli.py  test_frontend_config.py  test_frontend_dashboard.py  (+76 more)
tools/: add_missing_btc_sell.py  add_missing_usduc_sell.py  adjust_scanner_tokens.py  analyze_trading_history.py  clean_real_trades.py  clean_trading_data.py  clear_all_cache.py  clear_paper_cache.py  fix_btc_amounts.py  fix_btc_precision.py  generate_asset_scores.py  log_monitor.py  manage_enhanced_scanning.py  manage_env.py  monitor_backlog.py  monitor_backlog_manager.py  monitor_backtesting.py  monitor_trading_data.py  position_analyzer.py  recover_trading_history.py  show_status.py
(+412 files in other folders)
